--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,39 @@
 			<artifactId>selenium-htmlunit-driver</artifactId>
 			<version>2.52.0</version>
 		</dependency>
+		<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-core</artifactId>
+    <version>4.3.1</version>
+</dependency>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/datatable -->
+<!-- https://mvnrepository.com/artifact/io.cucumber/datatable -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>datatable</artifactId>
+    <version>3.3.0</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+
+
+<dependency>
+  <groupId>org.slf4j</groupId>
+  <artifactId>slf4j-simple</artifactId>
+  <version>1.7.25</version>
+  <scope>test</scope>
+</dependency>
+
+<dependency>
+  <groupId>org.slf4j</groupId>
+  <artifactId>slf4j-api</artifactId>
+  <version>1.7.25</version>
+</dependency>
+
+		
 	</dependencies>
+	
+
 	
 	<build>
 		<plugins>
