--- a/src/main/resources/ConfigurationFile/log4j.properties
+++ b/src/main/resources/ConfigurationFile/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, FILE,STDOUT
+log4j.rootLogger=INFO, FILE,STDOUT, DEBUG
 
 # Console Appender
 log4j.appender.name=STDOUT
@@ -18,3 +18,4 @@ log4j.appender.FILE.maxFileSize=25MB
 log4j.appender.FILE.maxBackupIndex=100
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%-5p] [%c{1}] - [%M] %m%n
+
